--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -1,4 +1,5 @@
-usuario.property= Usuario Profile Dev
+usuario.property= Usuario Profile Dev Update
+spring.datasource.url=jdbc:mysql://localhost:3306/eva
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
